--- a/index.html
+++ b/index.html
@@ -197,27 +197,27 @@
               </a>
             </div> -->
             <button onclick="openMenu(event, 'Pasta');" class="large-menu__tab large-menu__tab--active">
-              <h2>PASTA</h2>
+              PASTA
             </button>
             <button onclick="openMenu(event, 'Rice');" class="large-menu__tab">
-              <h2>RICE</h2>
+              RICE
             </button>
             <button onclick="openMenu(event, 'Sides');" class="large-menu__tab">
-              <h2>SIDES</h2>
+              SIDES
             </button>
           </div>
 
           <div id="Pasta" class="large-food-menu">
             <div class="large-menu__item large-menu__item--1">
-              <h3>Salmon Spaghetti<span class="large-menu__item-price">£12.50</span></h3>
+              <h2>Salmon Spaghetti<span class="large-menu__item-price">£12.50</span></h2>
               <p>Salmon Spaghetti with Mushroom Sauce</p>
             </div>
             <div class="large-menu__item large-menu__item--2">
-              <h3>Baked Seafood Fettuccine<span class="large-menu__item-price">£14.50</span></h3>
+              <h2>Baked Seafood Fettuccine<span class="large-menu__item-price">£14.50</span></h2>
               <p>Prawn and Squid with Fettuccine with White Sauce</p>
             </div>
             <div class="large-menu__item large-menu__item--3">
-              <h3>Mac and Cheese with Ham<span class="large-menu__item-price">£10.50</span></h3>
+              <h2>Mac and Cheese with Ham<span class="large-menu__item-price">£10.50</span></h2>
               <p>Macaroni and Cheese with Parma Ham</p>
             </div>
             <div class="large-menu__image">
@@ -230,15 +230,15 @@
 
           <div id="Rice" class="large-food-menu">
             <div class="large-menu__item large-menu__item--1">
-              <h3>Thai Pineapple Fried Rice<span class="large-menu__item-price">£16.50</span></h3>
+              <h2>Thai Pineapple Fried Rice<span class="large-menu__item-price">£16.50</span></h2>
               <p>Thai-style Fried Rice with Seafood and Pineapple</p>
             </div>
             <div class="large-menu__item large-menu__item--2">
-              <h3>Salmon and Prawn Risotto<span class="large-menu__item-price">£14.50</span></h3>
+              <h2>Salmon and Prawn Risotto<span class="large-menu__item-price">£14.50</span></h2>
               <p>Salmon and Prawn Risotto in Mushroom Sauce</p>
             </div>
             <div class="large-menu__item large-menu__item--3">
-              <h3>Mackerel with Black Rice<span class="large-menu__item-price">£12.50</span></h3>
+              <h2>Mackerel with Black Rice<span class="large-menu__item-price">£12.50</span></h2>
               <p>Grilled Mackerel with Tofu and Black Rice</p>
             </div>
             <div class="large-menu__image">
@@ -251,15 +251,15 @@
 
           <div id="Sides" class="large-food-menu">
             <div class="large-menu__item large-menu__item--1">
-              <h3>Satay Chicken Skewers<span class="large-menu__item-price">£8.00</span></h3>
+              <h2>Satay Chicken Skewers<span class="large-menu__item-price">£8.00</span></h2>
               <p>Grilled Chicken Skewers with Satay Sauce</p>
             </div>
             <div class="large-menu__item large-menu__item--2">
-              <h3>Salmon Avocado Rolls<span class="large-menu__item-price">£9.50</span></h3>
+              <h2>Salmon Avocado Rolls<span class="large-menu__item-price">£9.50</span></h2>
               <p>Salmon, Egg and Avocado in Rice Paper Rolls</p>
             </div>
             <div class="large-menu__item large-menu__item--3">
-              <h3>Petits Pains Curry Prawn<span class="large-menu__item-price">£8.50</span></h3>
+              <h2>Petits Pains Curry Prawn<span class="large-menu__item-price">£8.50</span></h2>
               <p>Curry Prawn in Petits Pains</p>
             </div>
             <div class="large-menu__image">
