--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
           <div class="navbar__collapse" id="collapsibleNavbar" role="menu" aria-labelledby="menu-toggler">
             <ul class="navbar__nav" role="none">
               <li class="navbar__nav-item" role="none">
-                <a class="navbar__nav-link" href="#menu" role="menuitem" tabindex="-1">Menu</a>
+                <a class="navbar__nav-link" href="#menu" role="menuitem">Menu</a>
               </li>
               <li class="navbar__nav-item" role="none">
-                <a class="navbar__nav-link" href="#reservation" role="menuitem" tabindex="-1">Reservation</a>
+                <a class="navbar__nav-link" href="#reservation" role="menuitem">Reservation</a>
               </li>
               <li class="navbar__nav-item" role="none">
-                <a class="navbar__nav-link" href="#findus" role="menuitem" tabindex="-1" id="findus-link">Find
+                <a class="navbar__nav-link" href="#findus" role="menuitem" id="findus-link">Find
                   Us</a>
               </li>
             </ul>
