--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </noscript> -->
 
 
-  <!-- <link rel="stylesheet" href="./dist/styles/googlefont.css">
+  <link rel="stylesheet" href="./dist/styles/googlefont.css">
   <link rel="stylesheet" href="./dist/styles/loader.css">
   <script src="./dist/scripts/critical-modern-script.js"></script>
 
@@ -62,13 +62,13 @@
     onload="this.onload=null;this.rel='stylesheet'">
 
   <script defer src="./dist/scripts/non-critical-modern-script.js"></script>
-  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.js" type="text/javascript"></script> -->
+  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.js" type="text/javascript"></script>
 
 
 
 
 
-  <link rel="stylesheet" href="./dist/styles/googlefont.min.css">
+  <!-- <link rel="stylesheet" href="./dist/styles/googlefont.min.css">
   <link rel="stylesheet" href="./dist/styles/loader.min.css">
   <script src="./dist/scripts/critical-modern-script.min.js"></script>
 
@@ -78,7 +78,7 @@
     onload="this.onload=null;this.rel='stylesheet'">
 
   <script defer src="./dist/scripts/non-critical-modern-script.min.js"></script>
-  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js" type="text/javascript"></script>
+  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js" type="text/javascript"></script> -->
 
 </head>
 
@@ -279,48 +279,49 @@
 
         <div class="small-menu__carousel" aria-roledescription="carousel" aria-label="Food Highlight">
           <!-- carousel content for small to medium menu -->
-          <div class="small-menu__slideshow-container">
-            <div id="slideshow-container">
+          <div class="small-menu__carousel__track-container">
+            <div id="small-menu__carousel__track">
               <!-- images with caption text -->
-              <div class="small-menu__slide small-menu__slide--fade" id="slide1" role="tabpanel"
+              <div class="small-menu__carousel__slide small-menu__carousel__slide--fade" id="slide1" role="tabpanel"
                 aria-roledescription="slide" aria-label="Slide 1 of 3">
-                <img src="./dist/assets/images/salmon-spaghetti.webp"
+                <img class="small-menu__carousel__image" src="./dist/assets/images/salmon-spaghetti.webp"
                   onerror="this.onerror=null; this.src='./dist/assets/images/salmon-spaghetti.jpeg';"
                   alt="Salmon Spaghetti" title="Salmon Spaghetti" loading="lazy">
                 <div class="small-menu__image-description">Salmon Spaghetti</div>
               </div>
 
-              <div class="small-menu__slide small-menu__slide--fade" id="slide2" role="tabpanel"
+              <div class="small-menu__carousel__slide small-menu__carousel__slide--fade" id="slide2" role="tabpanel"
                 aria-roledescription="slide" aria-label="Slide 2 of 3">
-                <img src="./dist/assets/images/thai-pineapple-fried-rice.webp"
+                <img class="small-menu__carousel__image" src="./dist/assets/images/thai-pineapple-fried-rice.webp"
                   onerror="this.onerror=null; this.src='./dist/assets/images/thai-pineapple-fried-rice.jpeg';"
                   alt="Thai Pineapple Fried Rice" title="Thai Pineapple Fried Rice" loading="lazy">
                 <div class="small-menu__image-description">Thai Pineapple Fried Rice</div>
               </div>
 
-              <div class="small-menu__slide small-menu__slide--fade" id="slide3" role="tabpanel"
+              <div class="small-menu__carousel__slide small-menu__carousel__slide--fade" id="slide3" role="tabpanel"
                 aria-roledescription="slide" aria-label="Slide 3 of 3">
-                <img src="./dist/assets/images/satay-chicken-skewers.webp"
+                <img class="small-menu__carousel__image" src="./dist/assets/images/satay-chicken-skewers.webp"
                   onerror="this.onerror=null; this.src='./dist/assets/images/satay-chicken-skewers.jpeg';"
                   alt="Satay Chicken Skewers" title="Satay Chicken Skewers" loading="lazy">
                 <div class="small-menu__image-description">Satay Chicken Skewers</div>
               </div>
             </div>
+
             <!-- Next and previous buttons -->
-            <button class="small-menu__slideshow-button--prev" onclick="plusSlides(-1)" type="button"
-              aria-label="previous slide" aria-controls="slideshow-container">&#10094;</button>
-            <button class="small-menu__slideshow-button--next" onclick="plusSlides(1)" type="button"
-              aria-label="next slide" aria-controls="slideshow-container">&#10095;</button>
+            <button class="small-menu__carousel__button small-menu__carousel__button--prev" onclick="plusSlides(-1)"
+              type="button" aria-label="previous slide" aria-controls="small-menu__carousel__track">&#10094;</button>
+            <button class="small-menu__carousel__button small-menu__carousel__button--next" onclick="plusSlides(1)"
+              type="button" aria-label="next slide" aria-controls="small-menu__carousel__track">&#10095;</button>
           </div>
 
           <!-- The dots/circles -->
-          <div class="small-menu__slideshow-dots" role="tablist" aria-label="Slides">
-            <button class="small-menu__slideshow-dot" onclick="currentSlide(1)" type="button" role="tab" tabindex="0"
-              aria-label="Slide 1" aria-controls="slide1" style="padding-inline: 1px;"></button>
-            <button class="small-menu__slideshow-dot" onclick="currentSlide(2)" type="button" role="tab" tabindex="0"
-              aria-label="Slide 2" aria-controls="slide2" style="padding-inline: 1px;"></button>
-            <button class="small-menu__slideshow-dot" onclick="currentSlide(3)" type="button" role="tab" tabindex="0"
-              aria-label="Slide 3" aria-controls="slide3" style="padding-inline: 1px;"></button>
+          <div class="small-menu__carousel-dots" role="tablist" aria-label="Slides">
+            <button class="small-menu__carousel-dot" onclick="currentSlide(1)" type="button" role="tab" tabindex="0"
+              aria-label="Slide 1" aria-controls="slide1"></button>
+            <button class="small-menu__carousel-dot" onclick="currentSlide(2)" type="button" role="tab" tabindex="0"
+              aria-label="Slide 2" aria-controls="slide2"></button>
+            <button class="small-menu__carousel-dot" onclick="currentSlide(3)" type="button" role="tab" tabindex="0"
+              aria-label="Slide 3" aria-controls="slide3"></button>
           </div>
 
         </div>
