--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
           <div class="reservation__message-container" id="reservation-message">
             <div class="reservation__message-content">
               <h2>Booking Summary<span class="reservation__message__close-button">&times;</span></h2>
-              <p>Please confirm the following details:-</p>
+              <p>Please confirm the following details:</p>
               <ul class="reservation__message-list">
                 <li>Name:</li>
                 <li id="name-value"></li>
