--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
                 <a class="navbar__nav-link" href="#findus" role="menuitem" id="findus-link">Find
                   Us</a>
               </li>
+              <li class="navbar__nav-item" role="none">
+                <a class="navbar__nav-link" href="#findus" role="menuitem" id="findus-link">Test overflow</a>
+              </li>
+              <li class="navbar__nav-item" role="none">
+                <a class="navbar__nav-link" href="#findus" role="menuitem" id="findus-link">2 Test overflow</a>
+              </li>
             </ul>
           </div>
         </div>
